--- a/pharmacy/templates/drugs.html
+++ b/pharmacy/templates/drugs.html
@@ -1,53 +1,142 @@
+{% extends 'doctor/base.html'%}
 
+{% block content%}
 {% load static %}
 
-<!DOCTYPE html>
-<html>
-<head>
-
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="https://www.citizensfiber.com/assets/DataTables-1.10.7/extensions/Plugins/integration/bootstrap/3/dataTables.bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="https://www.citizensfiber.com/assets/DataTables-1.10.7/extensions/Responsive/css/dataTables.responsive.css">
-  <!-- <link href="{% static 'doctor/css/style.css' %}" rel="stylesheet"> -->
-  <!-- <link href="{% static 'doctor/css/style.min.css' %}" rel="stylesheet"> -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
-
-</head>
-<style>
-.modal a.close-modal[class*="icon-"] {
-  top: -10px;
-  right: -10px;
-  width: 20px;
-  height: 20px;
-  color: #fff;
-  line-height: 1.25;
-  text-align: center;
-  text-decoration: none;
-  text-indent: 0;
-  background: #900;
-  border: 2px solid #fff;
-  -webkit-border-radius:  26px;
-  -moz-border-radius:     26px;
-  -o-border-radius:       26px;
-  -ms-border-radius:      26px;
-  -moz-box-shadow:    1px 1px 5px rgba(0,0,0,0.5);
-  -webkit-box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
-  box-shadow:         1px 1px 5px rgba(0,0,0,0.5);
-}
-</style>
-
-<body>
 
 
-    <!-- Divider -->
-    <hr class="sidebar-divider my-0">
+<div class="page-wrapper">
+  {% for message in messages %}
+        <div class="alert  alert-{{ message.tags }}" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+          {{ message }}
+          </div>
+    {% endfor %}
+    <form method="post">
+      {% csrf_token %}
+          <div class="p-1 bg-light rounded rounded-pill shadow-sm mb-4">
+            <div class="input-group">
+              <input type="search" name="name" placeholder="Search for medecine" aria-describedby="button-addon1" class="form-control border-0 bg-light">
+              <div class="input-group-append">
+                <button id="button-addon1" type="submit" class="btn btn-link text-primary"><i class="fa fa-search"></i></button>
+              </div>
+            </div>
+          </div>
+      </form>
+<div class="card">
+<table id="example" class="table table-striped table-bordered "  >
+
+        <thead>
+            <tr>
+                <th>Drug name</th>
+                <th>Category</th>
+                <th>Quantity</th>
+                <th>Price per Unit</th>
+                <th>Supplier</th>
+                <th>Effects</th>
+                <th>Expiration Date</th>
+                <th>Action</th>
+
+            </tr>
+        </thead>
+        <tbody>
+          {% for Patient in patientInfo%}
+
+          {% if not request.method == 'POST'%}
+          {% for Drugs in drugs %}
+          <tr>
+            <td><a href="{% url 'pharmacy:add_drugs_payment' Patient.code Drugs.id %}" >{{Drugs.name}}</td>
+            <td>{{Drugs.category}}</td>
+            <td>{% if Drugs.quantity == '0' %}
+                <span class="badge badge-pill badge-warning">Out Of Stock</span>
+                {% else %}
+              {{Drugs.quantity}}
+
+              {% endif %}
+
+            </td>
+            <td>{{Drugs.pricePerUnit}}</td>
+            <td>{{Drugs.supplier}}</td>
+            <td>{{Drugs.effects}}</td>
+            <td>{{Drugs.expire_date|date:"M d, Y"}}
+              {% if Drugs.expire_date.date < today or Drugs.expire_date.date == today %}
+            <span class="badge badge-dark">Expired</span>
+            {% endif %}
+            </td>
+            <td><a class="btn btn-primary btn-labeled"  href="{% url 'pharmacy:add_drugs_payment' Patient.code Drugs.id %}" ><span class="btn-label"><i class="fa fa-success"></i></span>Add to cart</a>
+
+            </td>
+
+          </tr>
+          {% endfor%}
+          {% endif %}
+
+          {% if  request.method == 'POST'%}
+
+          {% for drugs in drugss %}
+          <tr>
+            <td><a href="{% url 'pharmacy:add_drugs_payment' Patient.code drugs.id %}" >{{drugs.name}}</td>
+            <td>{{drugs.category}}</td>
+            <td>{% if drugs.quantity == '0' %}
+                <span class="badge badge-pill badge-warning">Out Of Stock</span>
+                {% else %}
+              {{drugs.quantity}}
+
+              {% endif %}
+
+            </td>
+            <td>{{drugs.pricePerUnit}}</td>
+            <td>{{drugs.supplier}}</td>
+            <td>{{drugs.effects}}</td>
+            <td>{{drugs.expire_date|date:"M d, Y"}}
+              {% if drugs.expire_date.date < today or drugs.expire_date.date == today %}
+            <span class="badge badge-dark">Expired</span>
+            {% endif %}
+            </td>
+            <td><a class="btn btn-primary btn-labeled"  href="{% url 'pharmacy:add_drugs_payment' Patient.code drugs.id %}" ><span class="btn-label"><i class="fa fa-success"></i></span>Add to cart</a>
 
 
+            </td>
+
+          </tr>
+          {% endfor%}
+          {% endif %}
 
 
-              <div class="container-fluid" style="height:50%;">
+        </tbody>
+    </table>
+    {% endfor %}
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        {% if drugs.has_previous %}
 
-<table id="example" class="table table-striped table-bordered nowrap"  >
+        <li class="page-item"><a class="page-link" href="?page={{drugs.previous_page_number}}">Previous</a></li>
+        {% else %}
+        <li class="page-item disabled">
+      <a class="page-link" href="#" tabindex="-1">Previous</a>
+    </li>
+{% endif %}
+
+        <li class="page-item active"><a class="page-link" href="?page={{pg}}">Page {{ drugs.number }} of {{ drugs.paginator.num_pages }}</a></li>
+
+      {% if drugs.has_next %}
+
+        <li class="page-item"><a class="page-link" href="?page={{drugs.next_page_number}}">Next</a></li>
+        {% else %}
+        <li class="page-item disabled">
+      <a class="page-link" href="#" tabindex="-1">Next</a>
+    </li>
+{% endif %}
+{% for Patient in patientInfo%}
+<li><a href="{% url 'pharmacy:invoice' Patient.code%}" class="btn btn-success" style="margin-left:5px;">Invoice</a></li>
+{% endfor %}
+      </ul>
+    </nav>
+
+{% endblock%}
+<!-- <table id="example" class="table table-striped table-bordered nowrap"  >
   <a href="{% url 'pharmacy:scanBarcode'%}" class="btn btn-primary" style="margin-left:450px;">Back to Scan</a>
   {% for Patient in patientInfo%}
   <a href="{% url 'pharmacy:invoice' Patient.code%}" class="btn btn-success" style="margin-left:5px;">Invoice</a>
@@ -68,7 +157,7 @@
           <tr>
             <td><a href="{% url 'pharmacy:add_drugs_payment' Patient.code Drugs.id %}" >{{Drugs.name}}</a></td>
             <td>{{Drugs.category}}</td>
-            
+
             <td>{{Drugs.pricePerUnit}}</td>
           </tr>
           {% endfor%}
@@ -87,7 +176,49 @@
           <div class="copyright text-center my-auto"style="color:#577BCE">
            <span>Copyright &copy; Hosto 2019</span>
          </div>
-        </div>
+       </div><table id="example" class="table table-striped table-bordered nowrap"  >
+  <a href="{% url 'pharmacy:scanBarcode'%}" class="btn btn-primary" style="margin-left:450px;">Back to Scan</a>
+  {% for Patient in patientInfo%}
+  <a href="{% url 'pharmacy:invoice' Patient.code%}" class="btn btn-success" style="margin-left:5px;">Invoice</a>
+    {% endfor%}
+        <thead>
+            <tr>
+                <th>Drug name</th>
+                <th>Category</th>
+
+                <th>Price per Unit</th>
+
+            </tr>
+        </thead>
+        <tbody>
+          {% for Patient in patientInfo%}
+
+          {% for Drugs in drugs%}
+          <tr>
+            <td><a href="{% url 'pharmacy:add_drugs_payment' Patient.code Drugs.id %}" >{{Drugs.name}}</a></td>
+            <td>{{Drugs.category}}</td>
+
+            <td>{{Drugs.pricePerUnit}}</td>
+          </tr>
+          {% endfor%}
+          {% endfor %}
+        </tbody>
+    </table>
+
+
+
+
+
+
+    <div class="footer">
+     <footer class="sticky-footer bg-white">
+        <div class="container my-auto">
+          <div class="copyright text-center my-auto"style="color:#577BCE">
+     </footer>
+    <div class="footer">
+     <footer class="sticky-footer bg-white">
+        <div class="container my-auto">
+          <div class="copyright text-center my-auto"style="color:#577BCE">
      </footer>
     </div>
   </div>
@@ -100,36 +231,10 @@
 
 
 
+    </div>
+  </div>
 
+  <div id="ex1" class="modal">
 
-
-
-
-
-
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap.min.js"></script>
-    <script src="https://cdn.datatables.net/fixedheader/3.1.5/js/dataTables.fixedHeader.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
-
-    <script>
-    $(document).ready(function() {
-    var table = $('#example').DataTable( {
-        responsive: true
-    } );
-
-    new $.fn.dataTable.FixedHeader( table );
-} );
-
-
-    </script>
-
-</body>
-</html>
+    <a href="#" rel="modal:close">Close</a>
+  </div> -->
